Fixed a problem with the scrollbars not working correctly.

--- a/docs/src/app/pages/getting-started/getting-started.component.scss
+++ b/docs/src/app/pages/getting-started/getting-started.component.scss
@@ -1,4 +1,4 @@
-:host {
+.main-content {
     margin: 15px;
 }
 
