--- a/docs/src/scss/_app-tweaks.scss
+++ b/docs/src/scss/_app-tweaks.scss
@@ -12,22 +12,23 @@ app-ngbd-code > pre[class*="language-"] {
     grid-template-columns: minmax(max-content, 200px) 1fr;
     overflow-y: auto;
 
-    // Show scrollbars for both the nav and the content areas
-    > * {
+    // Show scrollbars for both the nav and the content areas, and give a little padding
+    > *:not(router-outlet) {
         overflow-y: auto;
-        margin: 15px;
-
-        .main-content {
-            max-width: 700px;
-        }
+        padding: 15px;
     }
 
     > ux-navigation .nav-title {
-        // Don't wrap the text
+        // Don't wrap the text in the side nav bar
         white-space: nowrap;
     }
 
+    // Move the router-outlet to the end of the list, so it doesn't interfere with the placement of the other components
     > router-outlet {
         order: 1;
     }
+}
+
+.main-content {
+    max-width: 700px;
 }
